--- a/flutterApp/my_app/pubspec.yaml
+++ b/flutterApp/my_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # web_socket_channel: ^2.4.0
   flutter_datetime_picker_plus: ^2.0.1
   amazon_cognito_identity_dart_2: ^3.8.1
+  flutter_dotenv: ^5.1.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
