--- a/react/GetRoutes/package.json
+++ b/react/GetRoutes/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "amazon-cognito-identity-js": "^6.3.15",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~15.4.6",
