--- a/react/GetRoutesX/package.json
+++ b/react/GetRoutesX/package.json
@@ -12,40 +12,40 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/drawer": "^7.4.1",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "amazon-cognito-identity-js": "^6.3.15",
-    "expo": "~53.0.9",
-    "expo-blur": "~14.1.4",
+    "expo": "^53.0.0",
+    "expo-blur": "~12.9.2",
     "expo-constants": "~15.4.6",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
-    "expo-linking": "~7.1.5",
-    "expo-location": "~18.1.4",
-    "expo-router": "~5.0.6",
-    "expo-splash-screen": "~0.30.8",
-    "expo-status-bar": "~2.2.3",
+    "expo-font": "~11.10.3",
+    "expo-haptics": "~12.8.1",
+    "expo-image": "~1.10.6",
+    "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.5",
+    "expo-router": "~3.4.10",
+    "expo-splash-screen": "~0.26.5",
+    "expo-status-bar": "~1.11.1",
     "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "expo-system-ui": "~2.9.4",
+    "expo-web-browser": "~12.8.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.6.4",
     "expo-secure-store": "~12.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.2.45",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
