--- a/react/GetRoutes/package.json
+++ b/react/GetRoutes/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "amazon-cognito-identity-js": "^6.3.15",
     "expo": "~53.0.10",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -23,7 +24,9 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.2.0",
     "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.5",
     "expo-router": "~5.0.7",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -37,9 +40,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-secure-store": "~14.2.3",
-    "expo-location": "~18.1.5"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
