--- a/react/GetRoutes/package.json
+++ b/react/GetRoutes/package.json
@@ -12,22 +12,24 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-picker/picker": "2.11.0",
-    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
     "amazon-cognito-identity-js": "^6.3.15",
-    "expo": "~53.0.10",
+    "dotenv": "^16.5.0",
+    "expo": "~53.0.0",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.2.0",
+    "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
     "expo-location": "~18.1.5",
-    "expo-router": "~5.0.7",
+    "expo-router": "~5.1.0",
     "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
@@ -38,8 +40,8 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
+    "react-native-screens": "^4.11.1",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
@@ -49,5 +51,9 @@
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "description": "This is an [Expo](https://expo.dev) project created with [`create-expo-app`](https://www.npmjs.com/package/create-expo-app).",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
