--- a/react/GetRoutes/package.json
+++ b/react/GetRoutes/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.13.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "^2.6.1",
@@ -19,6 +20,7 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "amazon-cognito-identity-js": "^6.3.15",
+    "aws-amplify": "^6.15.1",
     "dotenv": "^16.5.0",
     "expo": "~53.0.0",
     "expo-blur": "~14.1.5",
@@ -39,6 +41,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
